--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     android:layout_marginTop="80dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="16dp"
-    tools:context=".MainActivity"
+    tools:context=".view.MainActivity"
     android:layout_alignParentEnd="false"
     android:layout_alignParentStart="true">
 
